# comfy-chair-go

./: .env.example  .gitignore  .goreleaser.yml  AGENTS.md  CLAUDE.md  LICENSE  README.md  generate-all.sh  go.mod  go.sum  main.go  nodes.go  procattr_unix.go  procattr_windows.go  reload.go  styles.go  taskfile.yml
.claude/: settings.local.json
.github/workflows/: release.yml
demos/: README.md  demo-create-node.tape  demo-environment-setup.tape  demo-health-diagnostics.tape  demo-install.tape  demo-main-menu.tape  demo-migration.tape  demo-node-management.tape  demo-performance-monitor.tape  demo-reload-watch.tape  demo-start-stop.tape  demo-update-nodes.tape
internal/: cli.go  constants.go  core.go  health.go  install.go  logger.go  menu.go  migration.go  pathutil.go  performance.go  pidfile.go  process.go  utils.go
spec/: README.md  improvement-roadmap.md
spec/phases/: phase1-code-quality.md  phase2-user-experience.md
specs/: .coding-guildlines.yaml  .coding-nodes.md  .coding-rules.yaml
templates/: README.md
templates/advanced-node/: README.md  __init__.py  node_manifest.json  requirements.txt
templates/api-node/: __init__.py  node_manifest.json  requirements.txt
templates/model-node/: __init__.py  node_manifest.json  requirements.txt
templates/node/: .gitignore  LICENSE  README.md  __init__.py  node_manifest.json  pyproject.toml  requirements.txt
templates/node/js/: {{NodeName}}.js
templates/node/src/: __init__.py  {{NodeNameLower}}.py
templates/webapi-node/: README.md  __init__.py  api.py  node_manifest.json  requirements.txt
(+12 files in other folders)
